manifests/apps/bff/base/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  labels:
    app.kubernetes.io/name: bff
    app.kubernetes.io/part-of: arbeidsflate
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: bff
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bff
        app.kubernetes.io/part-of: arbeidsflate
        azure.workload.identity/use: "true"
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        linkerd.io/inject: enabled
    spec:
      serviceAccountName: bff
      containers:
        - name: bff
          image: ghcr.io/altinn/dialogporten-frontend-node-bff:set-by-ci
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: bff
  labels:
    app.kubernetes.io/name: bff
    app.kubernetes.io/part-of: arbeidsflate
spec:
  selector:
    app.kubernetes.io/name: bff
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bff
  labels:
    app.kubernetes.io/name: bff
    app.kubernetes.io/part-of: arbeidsflate
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bff
          port: 80
      filters:
        - requestHeaderModifier:
            set:
              - name: l5d-dst-override
                value: bff.product-arbeidsflate.svc.cluster.local:80
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /api
